--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,10 @@
         "php": "^8.3",
         "ashallendesign/favicon-fetcher": "^3.7.0",
         "bensampo/laravel-enum": "^6.2",
-        "echolabsdev/prism": "^0.23.0",
+        "echolabsdev/prism": "^0.98",
         "inertiajs/inertia-laravel": "^2.0",
         "laravel-notification-channels/telegram": "^6.0",
-        "laravel/framework": "^11.44.1",
+        "laravel/framework": "^12.0",
         "laravel/octane": "^2.6",
         "laravel/pennant": "^1.14",
         "laravel/pulse": "^1.3",
@@ -87,6 +87,9 @@
             "@php artisan key:generate --ansi",
             "@php -r \"file_exists('database/database.sqlite') || touch('database/database.sqlite');\"",
             "@php artisan migrate --graceful --ansi"
+        ],
+        "pre-package-uninstall": [
+            "Illuminate\\Foundation\\ComposerScripts::prePackageUninstall"
         ],
         "dev": [
             "Composer\\Config::disableProcessTimeout",
