--- a/phpstan.neon
+++ b/phpstan.neon
@@ -8,13 +8,14 @@ parameters:
         - app/
 
     # Level 10 is the highest level
-    level: 4
+    level: 5
 
     ignoreErrors:
-        # LengthAwarePaginator template covariance is a known issue with Larastan
+        # Collection/Paginator template covariance is a known issue with Larastan
         -
-            message: '#Anonymous function should return Illuminate\\Pagination\\LengthAwarePaginator.* but returns Illuminate\\Pagination\\LengthAwarePaginator.*#'
-            path: app/Actions/ShowFeedReader.php
+            message: '#Anonymous function should return Illuminate\\(Pagination\\LengthAwarePaginator|Support\\Collection).* but returns Illuminate\\(Pagination\\LengthAwarePaginator|Support\\Collection).*#'
+            paths:
+                - app/Actions/ShowFeedReader.php
 
 #    excludePaths:
 #        - ./*/*/FileToBeExcluded.php
