--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -45,7 +45,7 @@ jobs:
       - name: "run pint"
         run: composer pint -- --test
 
-  eslint:
+  biome:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v6
@@ -55,18 +55,5 @@ jobs:
       - name: npm ci
         run: npm ci
 
-      - name: eslint
-        run: npm run lint -- --max-warnings 0
-
-  prettier:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v6
-      - uses: actions/setup-node@v6
-        with:
-          node-version: "22"
-      - name: npm ci
-        run: npm ci
-
-      - name: prettier
-        run: npm run format-check
+      - name: biome
+        run: npm run biome-check
