--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@gfazioli/mantine-split-pane": "^1.1.5",
         "@headlessui/react": "^2.2.9",
         "@inertiajs/react": "^2.2.7",
+        "@mantine/charts": "^8.3.5",
         "@mantine/core": "^8.3.5",
         "@mantine/hooks": "^8.3.5",
         "@mantine/modals": "^8.3.5",
@@ -32,6 +33,7 @@
         "@vitejs/plugin-react": "^5.1.1",
         "autoprefixer": "^10.4.21",
         "axios": "^1.13.2",
+        "babel-plugin-react-compiler": "^19.0.0-beta-27714ef-20250124",
         "concurrently": "^9.2.1",
         "dayjs": "^1.11.19",
         "eslint": "^9.38.0",
@@ -50,11 +52,9 @@
         "react": "^18.2.0",
         "react-compiler-runtime": "^19.0.0-beta-714736e-20250131",
         "react-dom": "^18.2.0",
+        "reading-time-estimator": "^1.14.0",
         "recharts": "^2.15.4",
         "typescript": "^5.9.3",
-        "vite": "^7.2",
-        "@mantine/charts": "^8.3.5",
-        "babel-plugin-react-compiler": "^19.0.0-beta-27714ef-20250124",
-        "reading-time-estimator": "^1.14.0"
+        "vite": "^7.2"
     }
 }
