--- a/package.json
+++ b/package.json
@@ -4,18 +4,11 @@
     "scripts": {
         "build": "tsc && vite build",
         "dev": "vite",
-        "lint": "eslint resources/js --fix",
-        "lint-check": "eslint resources/js",
-        "format": "prettier --write .",
-        "format-check": "prettier --check .",
-        "biome": "biome check --write",
-        "biome-check": "biome check"
+        "lint": "biome check --write",
+        "lint-check": "biome check"
     },
     "devDependencies": {
         "@biomejs/biome": "^2.3.8",
-        "@eslint/compat": "^1.4.0",
-        "@eslint/eslintrc": "^3.3.1",
-        "@eslint/js": "^9.38.0",
         "@gfazioli/mantine-split-pane": "^1.1.5",
         "@headlessui/react": "^2.2.9",
         "@inertiajs/react": "^2.2.7",
@@ -25,33 +18,20 @@
         "@mantine/modals": "^8.3.5",
         "@mantine/notifications": "^8.3.5",
         "@mantine/spotlight": "^8.3.5",
-        "@rushstack/eslint-patch": "^1.14.0",
         "@tabler/icons-react": "^3.35.0",
-        "@trivago/prettier-plugin-sort-imports": "^5.2.2",
         "@types/node": "^24.9.0",
         "@types/react": "^18.0.28",
         "@types/react-dom": "^18.0.10",
-        "@typescript-eslint/eslint-plugin": "^8.46.2",
-        "@typescript-eslint/parser": "^8.32.1",
         "@vitejs/plugin-react": "^5.1.1",
         "autoprefixer": "^10.4.21",
         "axios": "^1.13.2",
         "babel-plugin-react-compiler": "^19.0.0-beta-27714ef-20250124",
         "concurrently": "^9.2.1",
         "dayjs": "^1.11.19",
-        "eslint": "^9.38.0",
-        "eslint-config-prettier": "^10.1.8",
-        "eslint-plugin-prettier": "^5.5.4",
-        "eslint-plugin-react": "^7.37.5",
-        "eslint-plugin-react-compiler": "^19.0.0-beta-714736e-20250131",
-        "eslint-plugin-react-hooks": "^7.0.0",
-        "globals": "^16.4.0",
         "laravel-vite-plugin": "^2.0",
         "postcss": "^8.5.6",
         "postcss-preset-mantine": "^1.18.0",
         "postcss-simple-vars": "^7.0.1",
-        "prettier": "^3.6.2",
-        "prettier-plugin-organize-imports": "^4.3.0",
         "react": "^18.2.0",
         "react-compiler-runtime": "^19.0.0-beta-714736e-20250131",
         "react-dom": "^18.2.0",
