--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -76,7 +76,8 @@ COPY --link --chown=${WWWUSER}:${WWWUSER} deploy/php.ini ${PHP_INI_DIR}/conf.d/9
 
 COPY --link --chown=${WWWUSER}:${WWWUSER} composer.json composer.lock ./
 
-RUN composer install \
+# Disable Datadog profiling during build to prevent segfaults
+RUN DD_TRACE_ENABLED=0 composer install \
     --no-dev \
     --no-interaction \
     --no-autoloader \
@@ -116,7 +117,8 @@ RUN mkdir -p \
     storage/logs \
     bootstrap/cache && chmod -R a+rw storage
 
-RUN composer install \
+# Disable Datadog profiling during build to prevent segfaults
+RUN DD_TRACE_ENABLED=0 composer install \
     --classmap-authoritative \
     --no-interaction \
     --no-ansi \
