--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -76,8 +76,8 @@ COPY --link --chown=${WWWUSER}:${WWWUSER} deploy/php.ini ${PHP_INI_DIR}/conf.d/9
 
 COPY --link --chown=${WWWUSER}:${WWWUSER} composer.json composer.lock ./
 
-# Disable Datadog profiling during build to prevent segfaults
-RUN DD_TRACE_ENABLED=0 composer install \
+# Completely disable Datadog during build to prevent segfaults
+RUN DD_TRACE_CLI_ENABLED=0 DD_PROFILING_ENABLED=0 composer install \
     --no-dev \
     --no-interaction \
     --no-autoloader \
@@ -117,10 +117,10 @@ RUN mkdir -p \
     storage/logs \
     bootstrap/cache && chmod -R a+rw storage
 
-# Disable Datadog profiling during build to prevent segfaults
-RUN DD_TRACE_ENABLED=0 composer install \
+# Completely disable Datadog during build to prevent segfaults
+RUN DD_TRACE_CLI_ENABLED=0 DD_PROFILING_ENABLED=0 composer install \
     --classmap-authoritative \
     --no-interaction \
     --no-ansi \
     --no-dev \
-    && composer clear-cache
+    && DD_TRACE_CLI_ENABLED=0 DD_PROFILING_ENABLED=0 composer clear-cache
